:bug: center image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 * {
   box-sizing: border-box;
-  transition: ease 0.3s;
+  transition: ease 0.4s;
 }
 
 body {
